Sprint 8 (#12)
* Added more genders

* Reversing

* Refactored Patient Gender (#10)

* Transversal actions audit log and Physiotherapists (#11)

* Model Psychiatrist + Tests

* Roles added

* RED RegisterUseCase + Refactoring Domain

* GREEN RegisterPsychiatristUseCase and a bit of refactoring

* RED adapter persistence

* Kind of works but autowire doesn't work

* General fixes

* Adapter REST for UseCase RegisterPsychiatrist

* Changed record password to model

* AuditLog Domain created

* Audit Aspect basically done

* For mongo test to work

* Psychiatrist to Physioterapist

* Lots and lots of things

* Change Indiba's Physio

* List for AuditLogs

* Fixes

* GetAllPatients use case

* Uptaded Patient Genders

* IndibaList updated

* PniReport list updated

* Trainingsession list updated